force-app/main/default/objects/TimeandExpenseHeader__c/TimeandExpenseHeader__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Time and Expense Header</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time and Expense Header</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>