force-app/main/default/objects/TimeandExpenseHeader__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>