force-app/main/default/objects/TimeandExpenseHeader__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>