force-app/main/default/objects/TimeandExpenseHeader__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>