force-app/main/default/objects/TimeandExpenseHeader__c/fields/TotalAssignmentExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalAssignmentExpenses__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Total Assignment Expenses</label>
    <summarizedField>TimeandExpenseDetails__c.ExpenseAmount__c</summarizedField>
    <summaryForeignKey>TimeandExpenseDetails__c.TimeandExpenseHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>