force-app/main/default/objects/TimeandExpenseHeader__c/fields/TotalAssignmentHours__c.field-meta.xml
<CustomField>
    <fullName>TotalAssignmentHours__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Total Assignment Hours</label>
    <summarizedField>TimeandExpenseDetails__c.Hours__c</summarizedField>
    <summaryForeignKey>TimeandExpenseDetails__c.TimeandExpenseHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>