force-app/main/default/objects/TimeandExpenseHeader__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-IC102318 - Created for BREG phase 1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confer with Enforcement Attorney</fullName>
            </value>
            <value>
                <fullName>Send Acknowledgement Letter to Complainant</fullName>
            </value>
            <value>
                <fullName>Conversation with Complainant</fullName>
            </value>
            <value>
                <fullName>Write Information Request Letter to Complainant</fullName>
            </value>
            <value>
                <fullName>Write Case Closing Letters</fullName>
            </value>
            <value>
                <fullName>Conversation with Other Party</fullName>
            </value>
            <value>
                <fullName>Conversation with Respondent</fullName>
            </value>
            <value>
                <fullName>Case Evaluation</fullName>
            </value>
            <value>
                <fullName>Perform Financial Analysis</fullName>
            </value>
            <value>
                <fullName>Perform Fieldwork</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Interview Complainant</fullName>
            </value>
            <value>
                <fullName>Interview Other Party</fullName>
            </value>
            <value>
                <fullName>Interview Respondent</fullName>
            </value>
            <value>
                <fullName>Write Memorandum of Interview/Investigation</fullName>
            </value>
            <value>
                <fullName>Prepare and Draft Investigation Report</fullName>
            </value>
            <value>
                <fullName>Write Information Request Letter to Other Party</fullName>
            </value>
            <value>
                <fullName>Prepare Subpoena</fullName>
            </value>
            <value>
                <fullName>Perform Registration/Background Check</fullName>
            </value>
            <value>
                <fullName>Review Evidence</fullName>
            </value>
            <value>
                <fullName>Write Information Request Letter to Respondent</fullName>
            </value>
            <value>
                <fullName>Status Conference</fullName>
            </value>
            <value>
                <fullName>Serve Subpoena</fullName>
            </value>
            <value>
                <fullName>Confer with Supervisor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>